# kisara-desktop

./: .gitignore  CHANGELOG  README.md  biome.json  cliff.toml  config.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: create_release.yml
sidecars/: README.md
src/: App.css  Home.tsx  i18n.ts  main.tsx  router.tsx  states.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  serve_files.rs
src-tauri/src/data/: anime.rs  episode.rs  mod.rs  search.rs
src-tauri/src/handlers/: anime.rs  mod.rs  settings.rs  torrent.rs  watch.rs  window.rs
src-tauri/src/states/: bgm_api.rs  config.rs  db.rs  mod.rs  qbit.rs  serve_signal.rs
src-tauri/src/states/sql/: add_anime_keywords.sql  create_table.sql  get_coming_week.sql  get_last_watched.sql  get_today_animes.sql  get_watch_next.sql
src-tauri/src/torrent_adapters/: dummy_adapter.rs  mod.rs  nyaa_adapter.rs
src-tauri/src/utils/: datetime.rs  mod.rs  season.rs  serve_files.rs  subtitle.rs  video.rs  watch.rs
src/commands/: commands.ts  types.ts
src/components/: AnimeSummary.tsx  CalendarGridItem.tsx  CloseAppBar.tsx  DashboardAnimeItem.tsx  DashboardEpisodeItem.tsx  EpisodeItem.tsx  GridAnimeItem.tsx  HistoryItem.tsx  KisaraSidebar.tsx  SearchAnimeItem.tsx  TorrentItem.tsx  TorrentsTable.tsx
src/locales/: en.json  ja.json  zh.json
src/routes/: AddedAnime.tsx  Calendar.tsx  CurrentOn.tsx  Dashboard.tsx  History.tsx  Home.tsx  List.tsx  Local.tsx  Play.tsx  Search.tsx  Settings.tsx
