[package]
name = "kisara_desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "kisara_desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "serve_files"
path = "src/serve_files.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kisara_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono", "time"] }
reqwest = { version = "0.12.15", features = ["json"] }
r2d2_sqlite = "0.27.0"
r2d2 = "0.8.10"
thiserror = "2.0.12"
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.88"
kuchikiki = "0.8.2"
open = "5.3.2"
librqbit = "8.0.0"
anyhow = "1.0.97"
tokio = { version = "1.44.2", features = ["process", "rt-multi-thread"] }
infer = "0.19.0"
tauri-plugin-shell = "2"
ntex = { version = "2.12.4", features = ["tokio"] }
sha2 = "0.10.8"
ntex-files = "2.0.0"
clap = { version = "4.5.37", features = ["derive"] }
rsubs-lib = "0.3.2"
sys-locale = "0.3.2"
tauri-plugin-dialog = "2"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tauri-plugin-notification = "2.2.2"

[profile.release]
opt-level = 3

[lints.clippy]
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn"
cloned_instead_of_copied = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
doc_comment_double_space_linebreaks = "warn"
doc_link_with_quotes = "warn"
elidable_lifetime_names = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
format_collect = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
missing_panics_doc = "warn"
mut_mut = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
no_effect_underscore_binding = "warn"
option_as_ref_cloned = "warn"
option_option = "warn"
pub_underscore_fields = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
str_split_at_newline = "warn"
string_add_assign = "warn"
struct_field_names = "warn"
too_many_lines = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unused_async = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
verbose_bit_mask = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
create_dir = "warn"
deref_by_slicing = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
iter_over_hash_type = "warn"
multiple_inherent_impl = "warn"
mutex_atomic = "warn"
panic_in_result_fn = "warn"
pathbuf_init_then_push = "warn"
pattern_type_mismatch = "warn"
pub_without_shorthand = "warn"
renamed_function_params = "warn"
return_and_then = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
unwrap_used = "warn"
